--- a/src/main/webapp/admin/pricing/index.xhtml
+++ b/src/main/webapp/admin/pricing/index.xhtml
@@ -15,11 +15,20 @@
                                     <p:ajax process="@this"></p:ajax>
                                     <p:tab title="Fees">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton class="w-100"
-                                                             ajax="false" 
-                                                             value="Item Fees"
-                                                             actionListener="#{viewController.makeAdminFeesAsPreviousPage()}"
-                                                             action="#{itemFeeManager.navigateToItemFees()}"/>
+                                            <p:commandButton 
+                                                class="w-100"
+                                                ajax="false" 
+                                                value="Item Fees"
+                                                actionListener="#{viewController.makeAdminFeesAsPreviousPage()}"
+                                                action="#{itemFeeManager.navigateToItemFees()}"/>
+
+
+                                            <p:commandButton
+                                                class="w-100"
+                                                ajax="false" 
+                                                value="Item Fees - Multiple"
+                                                action="#{itemFeeManager.navigateToItemFeesMultiple()}"/>
+
                                             <p:commandButton class="w-100"
                                                              ajax="false"
                                                              value="Item Fees List"
