--- a/src/main/webapp/admin/lims/investigation.xhtml
+++ b/src/main/webapp/admin/lims/investigation.xhtml
@@ -116,7 +116,7 @@
                                     
                                     <h:outputText value="Has a Report Format" ></h:outputText>
                                     <p:selectBooleanCheckbox  
-                                        id="chkMasterItem" 
+                                        id="chkHasReport" 
                                         itemLabel="Master Item Reference" 
                                         value="#{itemController.current.hasReportFormat}" >
                                     </p:selectBooleanCheckbox>
@@ -124,14 +124,12 @@
                                     <h:outputText value="Master Item Reference" ></h:outputText>
                                     <p:autoComplete 
                                         value="#{itemController.current.masterItemReference}"
-                                        converter="ixcon"  
-                                        widgetVar="aIx1" 
                                         forceSelection="true" 
                                         id="itemAsIx"
                                         var="ix1"
                                         class="w-100"
                                         completeMethod="#{itemController.completeMasterItems}"
-                                        itemLabel="#{ix1}" 
+                                        itemLabel="#{ix1.name}" 
                                         itemValue="#{ix1}" 
                                         size="30"  
                                         >
