--- a/src/main/webapp/admin/lims/investigation.xhtml
+++ b/src/main/webapp/admin/lims/investigation.xhtml
@@ -117,7 +117,7 @@
                                     <h:outputText value="Has a Report Format" ></h:outputText>
                                     <p:selectBooleanCheckbox  
                                         id="chkHasReport" 
-                                        itemLabel="Master Item Reference" 
+                                        itemLabel="Has a Report Format" 
                                         value="#{itemController.current.hasReportFormat}" >
                                     </p:selectBooleanCheckbox>
                                     
