Closes #2053 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin/items/index.xhtml
+++ b/src/main/webapp/admin/items/index.xhtml
@@ -87,6 +87,12 @@
                                     <p:commandButton   
                                         class="w-100"  
                                         ajax="false" 
+                                        value="Investigations Upload" 
+                                        action="/admin/items/investigation_upload" />
+                                    
+                                    <p:commandButton   
+                                        class="w-100"  
+                                        ajax="false" 
                                         value="OPD Service Upload" 
                                         action="/admin/items/opd_service_upload" />
 
