Closes #2062 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/pharmacy/admin/atm.xhtml
+++ b/src/main/webapp/pharmacy/admin/atm.xhtml
@@ -99,6 +99,15 @@
                                         itemValue="#{v}"
                                         required="true"
                                         requiredMessage="VTM is needed"></p:autoComplete>
+
+
+                                    <p:outputLabel for="txtDes" class="form-label w-100">Description</p:outputLabel>
+                                    <h:inputTextarea 
+                                        id="txtDes" 
+                                        value="#{atmController.current.name}" 
+                                        required="false" 
+                                        class="form-control" 
+                                        ></h:inputTextarea>
                                 </p:panelGrid>
                                 <p:focus id="focusDetail" for="gpDetail" ></p:focus>
                             </h:form>
