--- a/src/main/webapp/admin/items/opd_service_upload.xhtml
+++ b/src/main/webapp/admin/items/opd_service_upload.xhtml
@@ -11,7 +11,8 @@
     <ui:define name="item">
 
         <h:form >
-            <p:poll ></p:poll>
+            <p:poll update="txtPoll"></p:poll>
+            <h:outputLabel value="" id="txtPoll" ></h:outputLabel>
         </h:form>
 
         <div class="container-fluid" >
@@ -79,6 +80,22 @@
                                 <td>Inward Charge Category</td>
                                 <td>Inward Charge Category. Optional.</td>
                             </tr>
+                            <tr>
+                                <td>I</td>
+                                <td>Item Type</td>
+                                <td>Optional. Default is Service. Other options include Investigation</td>
+                            </tr>
+                            <tr>
+                                <td>J</td>
+                                <td>Hospital Fee</td>
+                                <td>Optional. Created for Logged Department and Institution</td>
+                            </tr>
+                             <tr>
+                                <td>K</td>
+                                <td>Outside Fee</td>
+                                <td>Optional. Created Column data.</td>
+                            </tr>
+                            
                         </tbody>
                     </table>
                 </div>
@@ -86,63 +103,6 @@
         </div>
 
 
-
-
-        <h:panelGroup>
-            <h:form id="form" enctype="multipart/form-data">
-                <p:growl />
-                <p:panel header="Upload OPD Services">
-                    <h:panelGrid columns="2">
-                        <h:outputText value="Service Category/Sub Category" ></h:outputText>
-                        <p:autoComplete 
-                            completeMethod="#{categoryController.completeServiceCategory}" 
-                            var="pta" 
-                            itemLabel="#{pta.name}"
-                            itemValue="#{pta}" 
-                            forceSelection="true" 
-                            value="#{serviceController.category}">
-                            <p:column>#{pta.name}</p:column>
-                            <p:column>#{pta.parentCategory}</p:column>                                        
-                        </p:autoComplete>
-
-                        <h:outputText value="Institution"></h:outputText>
-                        <p:selectOneMenu id="cmbIns" value="#{serviceController.institution}" class="form-control">
-                            <f:selectItem itemLabel="Please select an Institution"/>
-                            <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                            <f:ajax execute="cmbIns" render="cmbDep" event="change"/>
-                        </p:selectOneMenu>
-
-                        <h:outputText value="Department"></h:outputText>
-                        <h:panelGroup  id="cmbDep"  >
-                            <p:selectOneMenu
-                                rendered="#{serviceController.institution ne null}"
-                                value="#{serviceController.department}" class="form-control">
-                                <f:selectItem itemLabel="Please select a Department"/>
-                                <f:selectItems value="#{departmentController.getInstitutionDepatrments(serviceController.institution)}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                            </p:selectOneMenu>
-                        </h:panelGroup>
-
-
-                        <h:outputText value="Inward Charge Category"></h:outputText>
-                        <p:selectOneMenu
-                            filter="true"
-                            filterMatchMode="contains"
-                            id="cmbInward" 
-                            value="#{serviceController.current.inwardChargeType}" 
-                            class="form-control">
-                            <f:selectItem itemLabel="Please select Charge"/>
-                            <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
-                        </p:selectOneMenu>
-
-                        <!-- File Upload Section -->
-                        <h:outputText value="Upload Excel"></h:outputText>
-                        <p:fileUpload value="#{serviceController.file}" mode="simple" />
-                    </h:panelGrid>
-
-                    <p:commandButton value="Upload &amp; Process" action="#{serviceController.uploadOpdItemNamesAndFee}" ajax="false" />
-                </p:panel>
-            </h:form>
-        </h:panelGroup>
 
 
     </ui:define>
